--- a/src/templates/components/seoMenu/_imagesTab.twig
+++ b/src/templates/components/seoMenu/_imagesTab.twig
@@ -54,7 +54,7 @@
 
     <template toolbar-if="!images.length">
         <div class="cat-toolbar-seo-menu-images-empty">
-            <h3 class="cat-typo-body-md cat-semi-bold">{{ "No images found"|t }}</h3>
+            <h3 class="cat-typo-body-md cat-semi-bold">{{ "No images found"|t('author-toolbar') }}</h3>
         </div>
     </template>
 </section>
