--- a/src/templates/components/socialPreviews/_facebook.twig
+++ b/src/templates/components/socialPreviews/_facebook.twig
@@ -9,7 +9,7 @@
             <div class="cat-toolbar-seo-menu-previews-results-placeholder-image">
                 {{ svg("@digitalastronaut/craftauthortoolbar/web/icons/image.svg") }}
 
-                <p class="cat-typo-body-md">{{ "No social image provided"|t }}</p>
+                <p class="cat-typo-body-md">{{ "No social image provided"|t('author-toolbar') }}</p>
             </div>
         {% endif %}
     </div>
