--- a/src/templates/components/socialPreviews/_whatsapp.twig
+++ b/src/templates/components/socialPreviews/_whatsapp.twig
@@ -11,7 +11,7 @@
                     <div class="cat-toolbar-seo-menu-previews-results-placeholder-image">
                         {{ svg("@digitalastronaut/craftauthortoolbar/web/icons/image.svg") }}
 
-                        <p class="cat-typo-body-md">{{ "No social image provided"|t }}</p>
+                        <p class="cat-typo-body-md">{{ "No social image provided"|t('author-toolbar') }}</p>
                     </div>
                 {% endif %}
 
