fix: styling scopes + commerce issues

--- a/src/web/assets/src/scss/components/_button.scss
+++ b/src/web/assets/src/scss/components/_button.scss
@@ -1,6 +1,6 @@
 @use "../base/breakpoints" as *;
 
-.cat-button {
+.cat-toolbar .cat-button {
 	height: 32px;
 	white-space: nowrap;
 	width: fit-content;
