--- a/src/templates/requests/_search.twig
+++ b/src/templates/requests/_search.twig
@@ -15,6 +15,8 @@
 
 {% set groupedEntries = filteredEntriesQuery.all|group("section.name") %}
 
+{% set results = groupedEntries|default([]) %}
+
 {% if craft.app.plugins.isPluginEnabled('commerce') %}
     {% set allProductsQuery = craft.products.status(null).uri(':notempty:') %}
     {% set filteredProductsQuery = clone(allProductsQuery) %}
@@ -28,7 +30,6 @@
     {% set results = groupedProducts|merge(groupedEntries)|default([]) %}
 {% endif %}
 
-{% set results = groupedEntries|default([]) %}
 
 {# ======================= #}
 {# TEMPLATE                #}
@@ -100,15 +101,18 @@
                                             <div class="cat-toolbar-search-results-card-main-info">
                                                 <p class="cat-typo-body-md">
                                                     {{ title }}
-                                                    {# {% if isProduct %}
-                                                        {% if minPrice == maxPrice %}
-                                                            - {{ minPrice|commerceCurrency }}
-                                                        {% else %}
-                                                            - {{ minPrice|commerceCurrency }} - {{ maxPrice|commerceCurrency }}
-                                                        {% endif %}
+
+                                                    {% if isProduct %}
+                                                        {% guard filter commerceCurrency%}
+                                                            {% if minPrice == maxPrice %}
+                                                                - {{ minPrice|commerceCurrency }}
+                                                            {% else %}
+                                                                - {{ minPrice|commerceCurrency }} - {{ maxPrice|commerceCurrency }}
+                                                            {% endif %}
+                                                        {% endguard %}
                                                         
                                                         ({{ amountOfVariants }} {{ "variants"|t('author-toolbar') }})
-                                                    {% endif %} #}
+                                                    {% endif %}
                                                 </p>
 
                                                 <div class="cat-toolbar-search-results-card-link">
