--- a/src/templates/requests/_search.twig
+++ b/src/templates/requests/_search.twig
@@ -99,7 +99,7 @@
                                             {% endif %}
 
                                             <div class="cat-toolbar-search-results-card-main-info">
-                                                <p class="cat-typo-body-md">
+                                                <p class="cat-typo-body-md entry-title">
                                                     {{ title }}
 
                                                     {% if isProduct %}
