--- a/src/web/assets/src/scss/components/_copyToClipboard.scss
+++ b/src/web/assets/src/scss/components/_copyToClipboard.scss
@@ -1,6 +1,6 @@
 @use "../base/breakpoints" as *;
 
-.cat-copy-to-clipboard {
+.cat-toolbar .cat-copy-to-clipboard {
 	display: flex;
 	align-items: center;
 	justify-content: center;
