--- a/src/web/assets/src/scss/components/_index.scss
+++ b/src/web/assets/src/scss/components/_index.scss
@@ -3,6 +3,7 @@
 @forward "socialPreviews";
 
 @forward "toolbar";
+@forward "toolbarSkeleton";
 @forward "pageStatus";
 @forward "button";
 @forward "toggle";
