--- a/src/web/assets/src/scss/components/chunks/_actionButtons.scss
+++ b/src/web/assets/src/scss/components/chunks/_actionButtons.scss
@@ -13,6 +13,11 @@
 			background-color: var(--clr-grey-700);
 			color: var(--clr-white);
 
+			&:hover {
+				background-color: var(--clr-grey-700);
+				color: var(--clr-white);
+			}
+
 			& > svg {
 				transform: scaleY(-1);
 			}
