fix: trying to solve blitz issue

--- a/src/web/assets/src/scss/components/chunks/_helpMenu.scss
+++ b/src/web/assets/src/scss/components/chunks/_helpMenu.scss
@@ -36,6 +36,11 @@
 
 		svg {
 			transition: transform ease-out 0.15s;
+			color: var(--clr-grey-900);
+		}
+
+		span {
+			color: var(--clr-grey-900);
 		}
 
 		svg:first-child {
